--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -46,6 +46,7 @@
     "autoprefixer": "^10.4.16",
     "eslint-config-custom": "*",
     "postcss": "^8.4.31",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
