--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "prettier": "^3.0.3",
     "tsconfig": "*",
-    "autoprefixer": "^10.4.16",
     "turbo": "latest"
   },
   "packageManager": "npm@9.7.1",
-  "workspaces": ["packages/*", "apps/*"]
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ]
 }
