--- a/frontend/apps/supplier/package.json
+++ b/frontend/apps/supplier/package.json
@@ -17,13 +17,14 @@
     "@floating-ui/react": "^0.26.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@highlight-run/next": "^7.0.1",
+    "@highlight-run/next": "^7.2.3",
     "@highlight-run/react": "^3.2.1",
     "@hookform/resolvers": "^3.3.2",
     "date-fns": "^2.30.0",
-    "highlight.run": "^8.0.1",
+    "eslint-config-next": "^14.0.3",
+    "highlight.run": "^8.2.2",
     "immutability-helper": "^3.1.1",
-    "next": "^13.5.6",
+    "next": "^14.0.3",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
@@ -38,11 +39,11 @@
   "devDependencies": {
     "@coaster/tailwind-config": "*",
     "@coaster/tsconfig": "*",
-    "@next/eslint-plugin-next": "^13.5.6",
     "@next/bundle-analyzer": "^14.0.0",
+    "@next/eslint-plugin-next": "^13.5.6",
     "@types/node": "^20.8.9",
-    "@types/react": "^18.2.32",
-    "@types/react-dom": "^18.2.14",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
     "eslint-config-custom": "*",
     "postcss": "^8.4.31",
