--- a/frontend/packages/utils/package.json
+++ b/frontend/packages/utils/package.json
@@ -10,14 +10,14 @@
     "lint": "eslint \"**/*.ts*\""
   },
   "dependencies": {
-    "tailwind-merge": "^1.14.0",
-    "highlight.run": "^8.0.1",
-    "react-dnd": "^16.0.1"
+    "highlight.run": "^8.2.2",
+    "react-dnd": "^16.0.1",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@coaster/tsconfig": "*",
-    "eslint-config-custom": "*",
     "eslint": "^8.52.0",
+    "eslint-config-custom": "*",
     "typescript": "^5.2.2"
   }
 }
