--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -25,6 +25,7 @@
     "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0-rc14",
     "eslint-config-next": "^14.0.3",
     "highlight.run": "^8.2.2",
     "immutability-helper": "^3.1.1",
