--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -30,6 +30,7 @@
     "highlight.run": "^8.2.2",
     "immutability-helper": "^3.1.1",
     "next": "^14.0.3",
+    "openai": "^4.20.1",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
