--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "eslint": "^8.52.0",
     "prettier": "^3.0.3",
     "tsconfig": "*",
-    "turbo": "latest"
+    "turbo": "^1.11.1"
   },
   "packageManager": "npm@9.7.1",
   "workspaces": [
