--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -24,6 +24,7 @@
     "@sanity/asset-utils": "^1.3.0",
     "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
+    "@vercel/speed-insights": "^1.0.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.0.0-rc14",
     "eslint-config-next": "^14.0.3",
