--- a/frontend/apps/supplier/package.json
+++ b/frontend/apps/supplier/package.json
@@ -20,6 +20,9 @@
     "@highlight-run/next": "^7.2.3",
     "@highlight-run/react": "^3.2.1",
     "@hookform/resolvers": "^3.3.2",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "date-fns": "^2.30.0",
     "eslint-config-next": "^14.0.3",
     "highlight.run": "^8.2.2",
