--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,15 @@
     "build": "turbo run build",
     "dev": "turbo run dev --concurrency 14",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "clean": "npm exec --workspaces -c 'rm -rf node_modules'; rm -rf node_modules"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.52.0",
-    "prettier": "^3.0.3",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
     "tsconfig": "*",
-    "turbo": "^1.11.2"
+    "turbo": "^1.11.3"
   },
   "packageManager": "npm@9.7.1",
   "workspaces": [
