--- a/frontend/apps/supplier/package.json
+++ b/frontend/apps/supplier/package.json
@@ -15,6 +15,7 @@
     "@coaster/types": "*",
     "@coaster/utils": "*",
     "@floating-ui/react": "^0.26.6",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@highlight-run/next": "^7.3.4",
