--- a/frontend/apps/supplier/package.json
+++ b/frontend/apps/supplier/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --port 3030",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf ./node_modules"
   },
   "dependencies": {
     "@coaster/assets": "*",
