--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "dev": "turbo run dev --concurrency 14",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "clean": "npm exec --workspaces -c 'rm -rf node_modules'; rm -rf node_modules"
+    "clean": "turbo run clean"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
