--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -35,6 +35,7 @@
     "embla-carousel-react": "^8.0.0-rc19",
     "eslint-config-next": "^14.1.0",
     "highlight.run": "^8.4.0",
+    "html-to-text": "^9.0.5",
     "immutability-helper": "^3.1.1",
     "next": "^14.1.0",
     "openai": "^4.24.7",
@@ -58,6 +59,7 @@
     "@portabletext/types": "^2.0.8",
     "@sanity/types": "^3.25.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
